[gd_scene load_steps=10 format=3 uid="uid://cs54pkhycebsn"]

[ext_resource type="Script" path="res://scripts/minijuego3/autosvertical.gd" id="1_0jaw3"]
[ext_resource type="Texture2D" uid="uid://x2x3tmmxwbtf" path="res://assets/autos/auto 3.png" id="1_oapom"]
[ext_resource type="Texture2D" uid="uid://2wup3i4wbx2h" path="res://assets/autos/auto 1.png" id="2_o828y"]
[ext_resource type="Texture2D" uid="uid://cw7hrqmxjb3i1" path="res://assets/autos/auto 2.png" id="3_l5lt0"]

[sub_resource type="RectangleShape2D" id="RectangleShape2D_50ebw"]
size = Vector2(111.5, 7.00001)

[sub_resource type="RectangleShape2D" id="RectangleShape2D_0pj84"]
size = Vector2(22.5, 6.00003)

[sub_resource type="RectangleShape2D" id="RectangleShape2D_cne2i"]
size = Vector2(118, 27)

[sub_resource type="RectangleShape2D" id="RectangleShape2D_7kqrn"]
size = Vector2(0, 17.5)

[sub_resource type="RectangleShape2D" id="RectangleShape2D_onpqj"]
size = Vector2(98, 45)

[node name="autos" type="CharacterBody2D"]
rotation = 1.5708
script = ExtResource("1_0jaw3")

[node name="auto_verde" type="Sprite2D" parent="."]
position = Vector2(0.999992, -7)
scale = Vector2(0.208743, 0.251633)
texture = ExtResource("1_oapom")

[node name="auto_rojo" type="Sprite2D" parent="."]
visible = false
position = Vector2(1.50005, -7.00001)
scale = Vector2(0.207317, 0.24911)
texture = ExtResource("2_o828y")

[node name="auto_amarillo" type="Sprite2D" parent="."]
visible = false
position = Vector2(1.50006, -7.00001)
scale = Vector2(0.206413, 0.248476)
texture = ExtResource("3_l5lt0")

[node name="atras" type="Area2D" parent="."]
position = Vector2(113.5, 80)

[node name="CollisionShape2D" type="CollisionShape2D" parent="atras"]
position = Vector2(-225.75, -83.5)
shape = SubResource("RectangleShape2D_50ebw")

[node name="adelante" type="Area2D" parent="."]
position = Vector2(113.5, 80)

[node name="CollisionShape2D" type="CollisionShape2D" parent="adelante"]
position = Vector2(-47.75, -83)
shape = SubResource("RectangleShape2D_0pj84")

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
position = Vector2(2.50005, 0.499992)
shape = SubResource("RectangleShape2D_cne2i")

[node name="CollisionShape2D2" type="CollisionShape2D" parent="."]
position = Vector2(63.5, -17.75)
shape = SubResource("RectangleShape2D_7kqrn")

[node name="choquebien" type="Area2D" parent="."]
collision_layer = 2
collision_mask = 2

[node name="CollisionShape2D" type="CollisionShape2D" parent="choquebien"]
position = Vector2(1, -3.5)
shape = SubResource("RectangleShape2D_onpqj")
